<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/side_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/main_menu_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="@style/ToolbarTheme"
            app:navigationContentDescription="abc_action_bar_home_description" />

        <FrameLayout
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/banner_red"
            android:visibility="gone">

            <TextView
                android:id="@+id/network_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/niramit_medium"
                android:gravity="center_horizontal"
                android:text="@string/network_error"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/centralFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/drawer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/layout_header"
        app:menu="@menu/menu_drawer" />

</android.support.v4.widget.DrawerLayout>