<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/edit_profile"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/edit_profile_activity_name"
        app:showAsAction="always" />
</menu>