<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".offer.list.ListOfferFragment"
    tools:layout_editor_absoluteY="25dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:hint="@string/search"
        android:inputType="text"
        android:maxLines="1"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/error_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_offer_error_database"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="15sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/refresh_list_offer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@id/search_bar"
            app:layout_constraintTop_toBottomOf="@+id/search_bar">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/offers_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"/>
        </android.support.v4.widget.SwipeRefreshLayout>

        <ProgressBar
            android:id="@+id/offer_list_loading"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />

        <TextView
            android:id="@+id/no_offers_to_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_offers"
            android:textColor="#6d6d6d"
            android:textSize="15sp"
            android:textStyle="bold"
            android:visibility="gone" />
    </FrameLayout>

</LinearLayout>